flux/clusters/infrastructure/base/prometheus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-grafana
  labels:
    pod-security.kubernetes.io/enforce: privileged
