flux/clusters/infrastructure/base/prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: prometheus-grafana
  annotations:
    tailscale.com/hostname: grafana
spec:
  ingressClassName: tailscale
  rules:
  - host: grafana
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
  tls:
  - secretName: grafana
    hosts:
    - grafana
